M-135 13) Форматирование текста + обновление контактов.

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -170,7 +170,7 @@
 
                     <h4 align="center">
                         Александра Присяжнюк<br>
-                        <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм @alex.sadny</a>
+                        <a target="_blank" href="https://www.instagram.com/alex.sadny/">Инстаграмм: @alex.sadny</a>
                     </h4>
 
                     <p class="zgt">
@@ -207,22 +207,43 @@
 
                     <h4 align="center">
                         Волоха Алина <br>
-                        <a target="_blank" href="https://m.vk.com/cumvan">Профиль ВКонтакте</a>
+                        <a target="_blank" href="https://m.vk.com/cumvan">VK: cumvan</a>
                     </h4>
 
                     <p class="zgt">
                         От чистого сердца говорю, что Марина Михайловна - лучший учитель русского языка, которого только можно найти!
                     </p>
                     <p class="zgt">
-                        Я пришла к ней во второй четверти 10-го класса с целью подтянуть белорусский язык, т.к. по этому предмету была худшая оценка в школе. Начинали с самой базы. После того как немного улучшили знания в белорусском, мы перешли к русскому языку, т.к. именно его я собиралась сдавать на ЦЭ. Хоть по русскому дела в школе были лучше (отметка 8), они держались лишь на удаче и некотором понимании пунктуации. С орфографией я вообще не дружила. В моей голове было лишь одно правило: ЖИ - ШИ пишется с буквой И.  И я не преувеличиваю! На тот момент я бы на ЦЭ и 40 баллов не получила. Я правила русского языка знала либо частично, либо искаженно, либо вообще никак. Постепенно мы начали всё проходить. Марина Михайловна очень спокойно и доходчиво объясняла правила и также спокойно могла их повторить по раз 20), что для меня считается одним из важнейших умений учителя. И как только подтянулся русский, за ним и белорусский язык не отставал, хоть ему уделяли намного меньше времени. Ещё очень важный аспект, что Марина Михайловна не пыталась объяснить «весь русский язык, который только существует». Мы занимались по её авторской программе, в которой было минимальное количество разного рода исключений. То есть она объясняла правила таким образом, что приходилось запоминать минимум текста, но никогда не ошибаться.
+                        Я пришла к ней во второй четверти 10-го класса с целью подтянуть белорусский язык, т.к. по этому предмету была худшая оценка в школе. 
+                        Начинали с самой базы. После того как немного улучшили знания в белорусском, мы перешли к русскому языку, 
+                        т.к. именно его я собиралась сдавать на ЦЭ. Хоть по русскому дела в школе были лучше (отметка 8), 
+                        они держались лишь на удаче и некотором понимании пунктуации. 
+                        С орфографией я вообще не дружила. 
+                        В моей голове было лишь одно правило: ЖИ - ШИ пишется с буквой И.  
+                        И я не преувеличиваю! На тот момент я бы на ЦЭ и 40 баллов не получила. 
+                        Я правила русского языка знала либо частично, либо искаженно, либо вообще никак. 
+                        Постепенно мы начали всё проходить. 
+                        Марина Михайловна очень спокойно и доходчиво объясняла правила и также спокойно могла их повторить по раз 20), 
+                        что для меня считается одним из важнейших умений учителя. 
+                        И как только подтянулся русский, за ним и белорусский язык не отставал, хоть ему уделяли намного меньше времени. 
+                        Ещё очень важный аспект, что Марина Михайловна не пыталась объяснить «весь русский язык, который только существует». 
+                        Мы занимались по её авторской программе, в которой было минимальное количество разного рода исключений. 
+                        То есть она объясняла правила таким образом, что приходилось запоминать минимум текста, но никогда не ошибаться.
                     </p>
 
                     <p class="zgt">
-                        Также у меня были огромные проблемы с написанием сочинений, которых с 10-го класса стало в разы больше (в связи с изменениями плана школьной программы). Спасибо БОЛЬШОЕ Марине Михайловне за помощь в их корректировке! Под конец 11-го класса, по моему мнению (и не только!), я стала намного лучше писать разного рода тексты.
+                        Также у меня были огромные проблемы с написанием сочинений, которых с 10-го класса стало в разы больше 
+                        (в связи с изменениями плана школьной программы). 
+                        Спасибо БОЛЬШОЕ Марине Михайловне за помощь в их корректировке! 
+                        Под конец 11-го класса, по моему мнению (и не только!), я стала намного лучше писать разного рода тексты.
                     </p>
 
                     <p class="zgt">
-                        Моё первое РТ было написано на 80 баллов. На тот момент мы ещё прошли не все правила. На втором РТ я показала результат в 87 баллов. На нем мне не хватило внимательности и четкого плана использования правил по русскому языку. Но уже на РТ 3 – 98 баллов, а на ЦЭ – 96! Счастью не было предела. С самого НУЛЯ до 96 БАЛЛОВ…
+                        Моё первое РТ было написано на 80 баллов. 
+                        На тот момент мы ещё прошли не все правила. 
+                        На втором РТ я показала результат в 87 баллов. 
+                        На нем мне не хватило внимательности и четкого плана использования правил по русскому языку. 
+                        Но уже на РТ 3 – 98 баллов, а на ЦЭ – 96! Счастью не было предела. С самого НУЛЯ до 96 БАЛЛОВ…
                     </p>
 
                     <p class="zgt">
@@ -242,7 +263,11 @@
                     </p>
 
                     <p class="zgt">
-                        Алина, мне было очень приятно с тобой работать! Несмотря на то, что ты пришла ко мне со слабой базой знаний по языкам, нам удалось сделать многое. Твоё трудолюбие, ответственность и целеустремлённость принесли отличный результат: ЦЭ было выполнено с единственной ошибкой из-за невнимательности! Умница!!! Желаю тебе отличной учебы в БГУ))
+                        Алина, мне было очень приятно с тобой работать! 
+                        Несмотря на то, что ты пришла ко мне со слабой базой знаний по языкам, нам удалось сделать многое. 
+                        Твоё трудолюбие, ответственность и целеустремлённость принесли отличный результат: 
+                        ЦЭ было выполнено с единственной ошибкой из-за невнимательности! 
+                        Умница!!! Желаю тебе отличной учебы в БГУ))
                     </p>
                 </section>
 
@@ -255,8 +280,8 @@
                     <h4 align="center">
                         Даник Никита<br>
                         ГУО «Лицей №1 г, Минска» <br>
-                        <a target="_blank" href="https://www.instagram.com/nikitadanilka/">Инстаграмм @nikitadanilka</a> <br>
-                        <a target="_blank" href="tg://resolve?domain=DamathNik">Telegram @DamathNik</a>
+                        <a target="_blank" href="https://www.instagram.com/nikitadanilka/">Инстаграмм: @nikitadanilka</a> <br>
+                        <a target="_blank" href="https://t.me/DamathNik">Telegram: @DamathNik</a>
                     </h4>
 
                     <p class="zgt">
@@ -289,8 +314,8 @@
                     <h4 align="center">
                         Павлов Илья<br>
                         12 гимназия<br>
-                        <a target="_blank" href="mailto:gmail-iliapavlov05@gmail.com">gmail-iliapavlov05@gmail.com</a><br>
-                        <a target="_blank" href="tg://resolve?domain=@ilya2005pan4">Telegram @ilya2005pan4</a>
+                        <a target="_blank" href="mailto:gmail-iliapavlov05@gmail.com">Email: gmail-iliapavlov05@gmail.com</a><br>
+                        <a target="_blank" href="hhttps://t.me/ilya2005pan4">Telegram: @ilya2005pan4</a>
                     </h4>
 
                     <p class="zgt">
