--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -188,7 +188,7 @@
 				<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
 				<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"> <a href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
 			</div>
 			<div class="otz">
@@ -348,7 +348,7 @@
 	</div>
 	<div class="telefon2">
 		<img src="./images/advantages/viber.png"><a href="viber://add?number=375296575971">+375 (29) 657-59-71</a><br>
-		<img src="./images/advantages/telegram.png" alt="telegram"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+		<img src="./images/advantages/telegram.png" alt="telegram"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 		<img src="./images/advantages/whatts.png"><a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375 (29) 657-59-71</a><br>
 		<!-- <img src="./images/advantages/skype.png"><a href="skype:xoziain_777?chat%E2%80%9D">(по запросу)</a> -->
 	</div>
@@ -400,7 +400,7 @@
 					</div>
 					<div class="glf2">
 						<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-						<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+						<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 						<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 					</div>
 					<div class="glf3">
