--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -84,7 +84,7 @@
 					<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
 					<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
 					<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"> <a href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 					<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
 				</div>
 				<div class="otz">
@@ -429,7 +429,7 @@
 			</div>
 			<div class="glf2">
 				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
