M-197. Corrected bug in link

--- a/russian-language-tutor-reviews.html
+++ b/russian-language-tutor-reviews.html
@@ -315,7 +315,7 @@
                         Павлов Илья<br>
                         12 гимназия<br>
                         <a target="_blank" href="mailto:gmail-iliapavlov05@gmail.com">Email: gmail-iliapavlov05@gmail.com</a><br>
-                        <a target="_blank" href="hhttps://t.me/ilya2005pan4">Telegram: @ilya2005pan4</a>
+                        <a target="_blank" href="https://t.me/ilya2005pan4">Telegram: @ilya2005pan4</a>
                     </h4>
 
                     <p class="zgt">
