M-185. Добавлено несколько первых абзацев.

--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -323,8 +323,10 @@
 		<div class="main">
 			<h2 class="main">
 				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
+					Репетитор по математике готовит к экзамену в лицеи. 
+					Подготовка по математике к поступлению в лицей, 9 класс. 
+					Подготовка к экзаменам в лицеи,9 класс, Минск, Беларусь.
+
 				</span>
 			</h2>
 
@@ -335,14 +337,24 @@
 			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">К 9 классу пора определится с профилем обучения на III ступени –среднего образования
+					(X – XI классы). Для мотивированных детей есть 2 варианта: либо сдать серьезные вступительные экзамены
+					и поступить в лицей, либо по высокому среднему баллу итоговых оценок за 9 класс пройти в сильный
+					профильный класс хорошей гимназии. Подготовку к экзамену по математике при поступлении в лицеи
+					проводит репетитор по математике Игнатьев Игорь Викторович.
+					</span>
 			</h2>
-
+			<h3>Лицеи в Минске:</h3>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
+					После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске: лицей им. Ф.Э. Дзержинского БГУ,
+					лицей БНТУ и Минский государственный областной лицей. В последние годы <em>единые экзамены</em> для 
+					поступления  составляет
+					<a href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a>, 
+					разница будет в количестве проходных баллов в зависимости от престижности выбранного лицея и 
+					профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
+					заблаговременно.
+
 				</p>
 				<ul>
 					<li>Пункт важный </li>
