--- a/math-7th-class.html
+++ b/math-7th-class.html
@@ -354,7 +354,7 @@
                     <li>умение применять вышеназванный материал</li>
                 </ul>
                 <p class="zgt">
-                    Дальнейшие проблемы с геометрией часто “растут” именно из 7 класса.
+                    Дальнейшие <em>проблемы с геометрией</em> часто “растут” именно из 7-го класса.
                 </p>
 
                 <p class="zgt">
