M-201. 10й класс. Окончание в слове.

--- a/math-10th-class.html
+++ b/math-10th-class.html
@@ -347,7 +347,7 @@
                 <p class="zgt">
                     Занятия по математике в 10-м классе – это <em>выход на финишную прямую</em> 
                     (обобщающую подготовку к ЦЭ, ЦТ и другим видам вступительных испытаний), 
-                    которая и начинается в конце 10 класса.
+                    которая и начинается в конце 10-го класса.
                 </p>
 
                 <p class="zgt">
