--- a/math-8th-class.html
+++ b/math-8th-class.html
@@ -341,7 +341,7 @@
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-                    Без полного понимания нижеперечисленных материалов, изучаемых в 8-ом классе, будет очень трудно что-то понять в 9-ом:
+                    Без полного понимания <em>нижеперечисленных материалов</em>, изучаемых в 8-ом классе, будет очень трудно что-то понять в 9-ом:
 				</p>
                 <ul>
                     <li>квадратные корни</li>
