M-201. Страницы добавлены в site_map.html

--- a/site_map.html
+++ b/site_map.html
@@ -345,6 +345,30 @@
 					<p class="zgt">
 						<a class="blink" href="shkolnikam.html">Школьникам</a>
 					</p>
+					<p class="zgt">
+						<a class="blink" href="math-4th-class.html">4-й класс</a>
+					</p>
+					<p class="zgt">
+						<a class="blink" href="math-5th-class.html">5-й класс</a>
+					</p>
+                    <p class="zgt">
+						<a class="blink" href="math-6th-class.html">6-й класс</a>
+					</p>
+                    <p class="zgt">
+						<a class="blink" href="math-7th-class.html">7-й класс</a>
+					</p>
+                    <p class="zgt">
+						<a class="blink" href="math-8th-class.html">8-й класс</a>
+					</p>
+                    <p class="zgt">
+						<a class="blink" href="math-9th-class.html">9-й класс</a>
+					</p>
+                    <p class="zgt">
+						<a class="blink" href="math-10th-class.html">10-й класс</a>
+					</p>
+                    <p class="zgt">
+						<a class="blink" href="math-11th-class.html">11-й класс</a>
+					</p>
 
 					<h2 class="mainleft">Абитуриентам</h2>
 						<p class="zgt">
