--- a/math-8th-class.html
+++ b/math-8th-class.html
@@ -2,21 +2,18 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. Карта сайта.
+			Репетитор по математике 8 класс, Минск
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Репетитор по математике 8 класс, Минск">
+		<meta name="keywords" content="Репетитор по математике 8 класс, Минск">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style-new.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
-			.mainleft {
-				text-align: left;
-				color: dimgray;
-			}
+
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -35,9 +32,10 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске.</h1>
+			<h1>Репетитор по математике 8 класс, Минск</h1>
 			<span class="zs">  
-				Карта сайта.
+				Репетитор 8 класс по математике в Минске, Беларусь<br>
+				Математика 8 класс, русский язык 8 класс, белорусский язык 8 класс
 			</span>
 			</div>
 			<div class="g3">
@@ -324,89 +322,44 @@
 		</div>
 		
 		<div class="main">
+			<h2 class="main">
+				<span class="h11">
+					Репетитор по математике в Минске Игнатьев Игорь Викторович<br>
+					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи
+				</span>
+			</h2>
 
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
 				</span>
 			</div>
+
+			<h2 class="main"> 
+				<span class="h21">Репетитор по математике 8 класс, Минск</span>
+			</h2>
+
 			<div id="realmain" class="zgt">
-				<h1>Карта сайта</h1>
-					<h2 class="mainleft">Общая информация</h2>
-					<p class="zgt">
-						<a class="blink" href="index.html">Главная</a><br>
-						<a class="blink" href="mestopolozhenie.html">Контактная информация и местоположение</a><br>
-						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
-						<a class="blink" href="about.html">Обо мне</a><br>
-						<a class="blink" href="cabinet.html">Рабочий кабинет</a><br>
-					</p>
+				<p class="zgt">
+                    Без полного понимания <em>нижеперечисленных материалов</em>, изучаемых в 8-ом классе, будет очень трудно что-то понять в 9-ом:
+				</p>
+                <ul>
+                    <li>квадратные корни</li>
+                    <li>уравнения</li>
+                    <li>неравенства</li>
+                    <li>квадратичные функции</li>
+                </ul>
 
-					<h2 class="mainleft">Школьникам</h2>
-					<p class="zgt">
-						<a class="blink" href="shkolnikam.html">Школьникам</a>
-					</p>
-					<p class="zgt">
-						<a class="blink" href="math-4th-class.html">4-й класс</a>
-					</p>
-					<p class="zgt">
-						<a class="blink" href="math-5th-class.html">5-й класс</a>
-					</p>
-                    <p class="zgt">
-						<a class="blink" href="math-6th-class.html">6-й класс</a>
-					</p>
-                    <p class="zgt">
-						<a class="blink" href="math-7th-class.html">7-й класс</a>
-					</p>
-                    <p class="zgt">
-						<a class="blink" href="math-8th-class.html">8-й класс</a>
-					</p>
-                    <p class="zgt">
-						<a class="blink" href="math-9th-class.html">9-й класс</a>
-					</p>
-                    <p class="zgt">
-						<a class="blink" href="math-10th-class.html">10-й класс</a>
-					</p>
-                    <p class="zgt">
-						<a class="blink" href="math-11th-class.html">11-й класс</a>
-					</p>
-
-					<h2 class="mainleft">Абитуриентам</h2>
-						<p class="zgt">
-							<a class="blink" href="uslovia_i_ceny2.html">Условия и цены</a><br>
-							<a class="blink" href="metodika_prepodavania.html">Методика преподавания и результаты ЦТ</a>
-						</p>
-						<h3>примеры ЦТ (Проверь себя)</h3>
-							<p class="zgt">
-								<a class="blink" href="pdf/3.pdf">Тест 1 (Легкий)</a><br>
-								<a class="blink" href="pdf/4.pdf">Тест 2 (Средний)</a><br>
-								<a class="blink" href="pdf/5.pdf">Тест 3 (Продвинутый)</a><br>
-								<a class="blink" href="pdf/6.pdf">Ответы к тестам</a><br>
-							</p>
-
-					<h2 class="mainleft">Студентам</h2>
-						<p class="zgt">
-							<a class="blink" href="podgotovka_k_ekzamenu.html">Подготовка к экзамену</a><br>
-							<a class="blink" href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
-						</p>
-						<h3 class="mainleft">Примеры решения задач</h3>
-							<p class="zgt">
-								<a class="blink" href="pdf/8a.pdf">Линейная алгебра, аналитическая геометрия, пределы, производная</a><br>
-								<a class="blink" href="pdf/8b.pdf">ФНП, интегралы, дифференциальные уравнения</a><br>
-								<a class="blink" href="pdf/8c.pdf">Двойные, тройные, криволинейные интегралы, элеметы теории поля, ряды</a><br>
-								<a class="blink" href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
-								<a class="blink" href="pdf/8e.pdf">ЭММ</a>
-							</p>
-
-					<h2 class="mainleft">Взрослым</h2>
-						<p class="zgt">
-							<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
-						</p>
-
-					<h2 class="mainleft">Другое</h2>
-						<p class="zgt">
-							<a class="blink" href="russian-language-tutor.html">Репетитор по русскому и белорусскому языкам</a><br>
-                            <a class="blink" href="russian-language-tutor-reviews.html">Отзывы о репетиторе по русскому и белорусскому языкам</a><br>
-						</p>
+                <p class="zgt">
+                    Данный раздел будет дополнен, а пока вы можете ознакомиться с общей информацией на страницах
+                    <a href="shkolnikam.html">математика для школьников</a>  или <a href="russian-language-tutor.html">репетитор по русскому языку</a>.
+                </p>
+                <p class="zgt">
+                    Занятия происходят на <a href="mestopolozhenie.html">территории преподавателя</a> или <a href="pomosch_reshenii_zadach.html">дистанционно</a>.
+                </p>
+                <p class="zgt">
+                    Также вы можете задать свой вопрос напрямую по телефонам и в мессенджерах, указанных в контактных данных.
+                </p>
 			</div>
 		<div class="clear"></div>
 	</div>
