M-181. Добавлены ссылки на страницы классов. Добавлено выравнивание секции по центру.

--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -499,38 +499,31 @@
                     </p>
                 </div>
 
-                <h2>
-                    Математика 4-11 класс:
-                </h2>
+                <section style="text-align: center;">
+                    <h2>
+                        Математика 4-11 класс:
+                    </h2>
 
-                <h3>
-                    I ступень среднего образования
-                </h3>
-                <ul>
-                    <li><a href="math">Репетитор по математике 4 класс</a></li>
-                </ul>
+                    <h3>
+                        I ступень среднего образования
+                    </h3>
+                    <p class="zgt"><a href="math-4th-class.html">Репетитор по математике 4 класс</a></p>
 
-                <h3>
-                    II ступень среднего образования                    
-                </h3>
-                <ul>
-                    <li>Репетитор по математике 5 класс</li>
-                    <li>Репетитор по математике 6 класс</li>
-                    <li>Репетитор по математике 7 класс</li>
-                    <li>Репетитор по математике 8 класс</li>
-                    <li>Репетитор по математике 9 класс</li>
-                </ul>
+                    <h3>
+                        II ступень среднего образования
+                    </h3>
+                    <p class="zgt"><a href="math-5th-class.html">Репетитор по математике 5 класс</a></p>
+                    <p class="zgt"><a href="math-6th-class.html">Репетитор по математике 6 класс</a></p>
+                    <p class="zgt"><a href="math-7th-class.html">Репетитор по математике 7 класс</a></p>
+                    <p class="zgt"><a href="math-8th-class.html">Репетитор по математике 8 класс</a></p>
+                    <p class="zgt"><a href="math-9th-class.html">Репетитор по математике 9 класс</a></p>
 
-
-                <h3>
-                    III ступень среднего образования
-                </h3>
-                <ul>
-                    <li>Репетитор по математике 10 класс</li>
-                    <li>Репетитор по математике 11 класс</li>
-                </ul>
-
-
+                    <h3>
+                        III ступень среднего образования
+                    </h3>
+                    <p class="zgt"><a href="math-10th-class.html">Репетитор по математике 10 класс</a></p>
+                    <p class="zgt"><a href="math-11th-class.html">Репетитор по математике 11 класс</a></p>
+                </section>
 
 			</div>
 		<div class="clear"></div>
