M-181. Update the content of the shkolnikam.html page. (#183)
* M-181. Обновлено содержание всей страницы.

* M-181. Исправен title и убраны лишние пробелы.

* M-181. Исправлены ключевые слова.

* M-181. Добавлены пропущенные изображения.

* M-181. 1. Исправлена структура начала текста. 2. Вместо кратних описаний классов даны просто оглавления классов.

* M-181. Добавлены ссылки на страницы классов. Добавлено выравнивание секции по центру.

* M-181. Общая стилизация заголовков h2, h3, h4 и <a> для style-new.css.

--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор математика класс 4, 5, 6, 7, 8, 9, 10, 11 в Минске
+			Репетитор по математике с 4 по 11 класс
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Репетитор по математике для школьников 5-7, 8, 9-11 классов. Подготовка к экзамену по математике 9, 11 класс. Репетитор по алгебре и геометрии Минск.  Школьная программа на углубленном уровне">
-		<meta name="keywords" content="школьник, математика, занятия">
+		<meta name="description" content="Репетитор по математике с 4 по 11 класс">
+		<meta name="keywords" content="репетитор математика класс, репетитор по математике минск, репетитор, репетитор математик, репетитор по математике, репетитор класс, репетитор математики, репетиторы минск, репетитор по математике в минске, репетитор математика минск, репетиторы беларусь, лучший репетитор по математике, хороший репетитор по математике, репетитор по алгебре, репетитор по геометрии.">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link href="style-new.css" rel="stylesheet" type="text/css">
@@ -31,9 +31,10 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Школьникам</h1>
+			<h1>Репетитор по математике с 4 по 11 класс</h1>
 			<span class="zs">  
-				помощь по математике школьникам
+				Репетитор по математике для школьников в Минске.
+				Репетиторы по математике и русскому языку, Минск, Беларусь
 			</span>
 			</div>
 			<div class="g3">
@@ -320,6 +321,11 @@
 		</div>
 		
 		<div class="main">
+			<h2 class="main">
+				<span class="h11">
+					Математика с 4 по 11 класс. Зачем нужен репетитор? 
+				</span>
+			</h2>
 
 			<div class="right1">
 				<span class="skr">
@@ -328,48 +334,197 @@
 			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Школьникам</span>
+				<span class="h21">Занятия со школьниками проводят репетитор по математике
+				Игнатьев Игорь Викторович и репетитор по русскому языку Игнатьева Марина
+				Михайловна, Игорь Викторович готовит также к олимпиадам и поступлению
+				в лицеи.</span>
 			</h2>
+
+            <div class="ck">
+                <a href="https://www.youtube.com/watch?v=cCTXrA1IR2w" target="_blank">
+                    <img alt="Репетитор по математике в Минске"
+                        class="image1"  
+                        src="images/photo/sh1.jpg" 
+                        title="Репетитор по математике в Минске"></a>
+                <!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+                <a href="https://www.youtube.com/watch?v=EYH5g5kS_xg" target="_blank">
+                    <img alt="Занятия по математике в группах"
+                        class="image" 
+                        src="images/photo/sh2.jpg" 
+                        title="Занятия по математике в группах">
+                </a>
+            </div>
+
+            <h2 class="main"> 
+                <span class="h21">Централизованное тестирование (ЦТ) и централизованный экзамен(ЦЭ):</span>
+            </h2>
+
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					1. Данный раздел предназначен для родителей учащихся, у которых возникли проблемы с усвоением школьной программы и для родителей учеников, желающих повысить уровень владения предметом. «Запустить» математику очень легко. Одна-две непонятые темы - и проблемы начинают накапливаться, как снежный ком, ибо математика – очень связная наука. Думаю, не стоит объяснять, что любую проблему лучше преодолевать на ее начальной стадии.
-				</p>
+					Провожу занятия для школьников с 4 по 11 классы с любым
+					уровнем подготовки. Считаю основным создание у ученика
+					фундаментальной математической базы, соответствующей его
+					классу, уровню,  математическим способностям, и дальнейшее
+					ее развитие. Учу находить взаимосвязь между различными
+					главами  и разделами математики. Особое внимание уделяю
+					изучению новых тем, зачастую работаю на опережение. При
+					этом считаю чрезвычайно важным добиться у ученика
+					понимания предмета в полном объеме, а не в рамках
+					последних тем. Всегда выхожу за пределы программы
+					учебника, предмет изучается  на более глубоком уровне.
+					При этом обязательно учитываются способности учащегося.
+					В итоге происходит повышение успеваемости. 
+                </p>
+
 				<p class="zgt">
-					2. Родители должны понимать, что уровень знаний, получаемый в школе, и уровень, требуемый при дальнейшем поступлении, зачастую сильно разнятся. Стабильные знания по математике - это не поверхностное восприятие нескольких последних тем с практически забытыми сведениями о ранее «изученном». Требуется понимание предмета в целом и сути изучаемого.
+					<strong>Отдельно выделю некоторые направления:</strong>
 				</p>
+
+				<ul>
+					<li>
+					    подготовка по математике для поступления в лицеи
+					</li>
+					<li>
+                        подготовка для поступления в профильный класс гимназии
+					</li>
+					<li>
+                        подготовка к математическим олимпиадам
+                    </li>
+					<li>
+                        решение нестандартных, креативных и логических задач
+					</li>
+				</ul>
+
 				<p class="zgt">
-					3. Если ребенок банально ленив или разбалован (не путать с неуспевающими детьми и детьми, не находящимися в должном контакте с учителем), то ни один репетитор не сможет помочь, пока родители не решат эту проблему. Метод поощрения и наказания по-прежнему очень актуален.
-				</p>
-				<p class="zgt">
-					4. Условия:
-				</p>
-				<p class="zgt">
-					- индивидуальные занятия, продолжительность 2 (90 минут) академических часа, стоимость 15 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (30 долларов за занятие).
-				</p>
-				<p class="zgt">
-					- занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (25 долларов за занятие).
-				</p>
-				<p class="zgt">
-					- занятия в минигруппах, продолжительность 2 (90 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (20 долларов за занятие). В группе 3-6 человек.
-				</p>
-				<p class="zgt">
-					- количество занятий: 1-2 раза в неделю (по 90 минут).
-				</p>
-				<p class="zgt">
-					Записаться на занятия можно по телефонам:<br>
-					<b>
-						8-017-37-222-73 (городской)<br>
-						8-029-657-59-71 (Velcom)<br>
-						8-029-851-52-51 (MTS)
-					</b>
-				</p>
-				<p class="zgt">
-					Занятия	 проходят на территории преподавателя.
-				</p>
-				<p class="zgt">
-					5. Репетитор по русскому, белорусскому языкам проводит индивидуальные занятия и занятия в парах для школьников, продолжительность 2 (90 минут) академических часа, стоимость от 7,5 до 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
-				</p>
+					Таким образом, если Вы ищете репетитора, который будет
+					приезжать к Вам и делать домашнее задание, то вряд ли я
+					подхожу для этой задачи 
+						<img src="./images/advantages/smile.png" 
+							alt="tech"
+							style="vertical-align: middle; width: 30px;"> 
+                </p>
+
+                <div class="b1">
+                    <p class="zgt">
+                        <strong>Родителям учащихся, у которых возникли проблемы с усвоением школьной программы </strong>    
+                    </p>
+                    <p class="zgt">
+                        «Запустить» математику очень легко. Одна-две непонятые темы - и проблемы
+                        начинают накапливаться, как снежный ком, ибо математика – очень
+                        связная наука. Думаю, не стоит объяснять, что любую проблему лучше
+                        <em>решать на ее начальной стадии.</em>
+                    </p>
+                    <p class="zgt">
+                        Если ребенок банально ленив или разбалован (не путать с неуспевающими
+                        детьми и детьми, не находящимися в должном контакте с учителем), то ни
+                        один репетитор не сможет помочь, пока родители не решат эту проблему.
+                        Метод поощрения и наказания по-прежнему не потерял своей актуальности
+                                <img src="./images/advantages/smile.png" 
+                                alt="tech"
+                                style="vertical-align: middle; width: 30px;"> 					
+                    </p>
+                </div>
+
+                <div class="b2">
+                    <p>
+                        <strong>Родителям учеников, желающим повысить уровень владения предметом.</strong>
+                    </p>
+
+                    <p class="zgt">
+                        Нужно понимать, что уровень знаний, получаемый в школе, и уровень,
+                        требуемый для дальнейшего поступления в вузы, зачастую <em>сильно разнятся</em>.
+                        Стабильные знания по математике - это не поверхностное восприятие
+                        нескольких последних тем с практически забытыми сведениями о
+                        «ранее изученном». Требуется <em>понимание предмета в целом</em> и сути
+                        изучаемого.
+                    </p>
+                </div>
+
+                <div class="b3">
+                    <p class="zgt"><strong>Условия:</strong></p>
+                    <ul>
+                        <li>
+                            подготовка по математике для поступления в лицеи
+                        </li>
+                        <li>
+                            <em>индивидуальные занятия</em>, продолжительность 2 (90 минут)
+                            академических часа, стоимость 15 долларов США по курсу продажи в
+                            коммерческих банках РБ за один академический час 
+                            (30 долларов за занятие)
+                        </li>
+                        <li>
+                            <em>занятия в паре</em>, продолжительность 2 (90 минут)
+                            академических часа, стоимость 12,5 долларов США по курсу продажи 
+                            в коммерческих банках РБ за один академический час (25 долларов 
+                            за занятие)
+                        </li>
+                        <li>
+                            <em>занятия в мини-группах</em>, продолжительность 2 
+                            (90 минут) академических часа, стоимость 10 долларов США 
+                            по курсу продажи в коммерческих банках РБ за один академический 
+                            час (20 долларов за занятие). В группе от 3 до 7 человек.
+                        </li>
+                    </ul>
+                </div>
+                <div class="b4">
+                    <p class="zgt">
+                        <strong>Формат и количество занятий.</strong>
+                    </p>
+                    <p  class="zgt">
+                        Стабильно отличные и хорошие результаты достигаются при любом виде занятий,
+                        как правило, <em>лучшие – в мини-группах</em>. Там присутствует элемент
+                        конкурентной борьбы. Группы строго ранжируются по <em>уровню знаний и 
+                        количеству учащихся</em>. Главное – желание заниматься и быть готовым 
+                        к преодолению трудностей. Формат занятия определяю я сам в зависимости 
+                        от многих факторов. Занятия проходят на <em>территории преподавателя</em>.
+                    </p>
+                    <p class="zgt">
+                        Занятия проводятся один или два раза в неделю для учеников
+                        с 4-го по 6-й класс и <em>2 раза в неделю для учащихся 
+                        7-х – 10-х классов</em>.
+                    </p>
+                </div>
+                <div class="b5">
+                    <p class="zgt">
+                        <strong>Очно или онлайн.</strong>
+                    </p>
+                    <p class="zgt">
+                        Мной предусмотрены все условия для <em>занятий онлайн</em>
+                        (профессиональная аппаратура, высокоскоростной интернет, 
+                        вывод на большой экран, Full HD видео), но все-таки по 
+                        возможности <em>рекомендую очное присутствие</em>. Также возможен 
+                        смешанный формат, когда основная часть группы занимается очно, 
+                        а те, кто болеет или находится не в Минске, работают в онлайн формате. 
+                    </p>
+                </div>
+
+                <section style="text-align: center;">
+                    <h2>
+                        Математика 4-11 класс:
+                    </h2>
+
+                    <h3>
+                        I ступень среднего образования
+                    </h3>
+                    <p class="zgt"><a href="math-4th-class.html">Репетитор по математике 4 класс</a></p>
+
+                    <h3>
+                        II ступень среднего образования
+                    </h3>
+                    <p class="zgt"><a href="math-5th-class.html">Репетитор по математике 5 класс</a></p>
+                    <p class="zgt"><a href="math-6th-class.html">Репетитор по математике 6 класс</a></p>
+                    <p class="zgt"><a href="math-7th-class.html">Репетитор по математике 7 класс</a></p>
+                    <p class="zgt"><a href="math-8th-class.html">Репетитор по математике 8 класс</a></p>
+                    <p class="zgt"><a href="math-9th-class.html">Репетитор по математике 9 класс</a></p>
+
+                    <h3>
+                        III ступень среднего образования
+                    </h3>
+                    <p class="zgt"><a href="math-10th-class.html">Репетитор по математике 10 класс</a></p>
+                    <p class="zgt"><a href="math-11th-class.html">Репетитор по математике 11 класс</a></p>
+                </section>
+
 			</div>
 		<div class="clear"></div>
 	</div>
