--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</div>
 				<div class="otz">
 					<span class="otz0">
-						<a href="otzivi.html">Отзывы о репетиторе >></a>
+						<a href="otzivi.html">Отзывы о репетиторе</a>
 					</span>
 					<div class="ot0">
 						<div class="ot1">
@@ -231,8 +231,7 @@
 		</a>
 	</span>
 	<span class="otz01">
-		<a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике >>
-		</a>
+		<a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике</a>
 	</span>
 
 	<div class="portal-raitings">
@@ -350,9 +349,8 @@
 			</div>
 				<span class="p1">
 					<a href="about.html">
-					Подробная информация о репетиторе
+					    Подробная информация о репетиторе
 					</a>
-						<span class="strelki">&gt;&gt;</span>
 				</span>
 			<div class="right1">
 				<span class="skr">
@@ -388,9 +386,9 @@
 				</span>
 				<span class="p1">
 					<a href="uslovia_i_ceny2.html">
-					Подробная информация о подготовке к ЦТ
+					    Подробная информация о подготовке к ЦТ
 					</a>
-					<span class="strelki">&gt;&gt;</span></span>
+				</span>
 			</div>
 			<div class="b2">
 					<strong>Репетитор по высшей математике.</strong>
@@ -408,9 +406,8 @@
 					</span>
 					<span class="p1">
 						<a href="podgotovka_k_ekzamenu.html">
-						Подробная информация о репетиторе по высшей математике
+						    Подробная информация о репетиторе по высшей математике
 						</a>
-					<span class="strelki">&gt;&gt;</span>
 					</span>
 			</div>
 			<div class="b3">
@@ -437,10 +434,8 @@
 				</span>
 				<span class="p1">
 					<a href="shkolnikam.html">
-					Подробная информация о репетиторе по математике для школьников
+					    Подробная информация о репетиторе по математике для школьников
 					</a>
-						<span class="strelki">&gt;&gt;
-						</span>
 				</span>
 			</div>
 			<div class="b4">
@@ -458,7 +453,6 @@
 					<a href="mathematics-for-professionals.html">
 					Подробная информация о репетиторе по математике для взрослых
 					</a>
-					<span class="strelki">&gt;&gt;</span>
 				</span>
 			</div>
 			<div class="b5">
@@ -472,9 +466,8 @@
 				</span>
 				<span class="p1">
 					<a href="pomosch_reshenii_zadach.html">
-					Подробная информация о репетиторе онлайн по математике
+					    Подробная информация о репетиторе онлайн по математике
 					</a>
-					<span class="strelki">&gt;&gt;</span>
 				</span>
 			</div>
 			<div class="title">Преимущества:
