M-88. Ссылки внутри класса p1 на главной - с новой строки, а первая из них - по центру.

--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
 			(свыше 25 учеников), абитуриенты, набравшие на <em>ЦТ по математике 100 баллов</em> 
 			(более 15 учеников).
 			</div>
-				<span class="p1">
+				<p class="p1" style="text-align: center;">
 					<a href="about.html">
 					    Подробная информация о репетиторе
 					</a>
-				</span>
+				</p>
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">
@@ -384,6 +384,7 @@
 				с возможностью любой выборки, будь то тема, уровень сложности, год, всевозможные другие критерии и их пересечения. 
 				Также мной осуществляется подготовка к <em>ЕГЭ по математике.</em>
 				</span>
+                <br>
 				<span class="p1">
 					<a href="uslovia_i_ceny2.html">
 					    Подробная информация о подготовке к ЦТ
@@ -404,6 +405,7 @@
 							style="vertical-align: middle; width: 30px;"> 
 					Пересдача и отчисление – это новые неприятные, но, тем не менее, реальные вещи. Не стоит до этого доводить.
 					</span>
+                    <br>
 					<span class="p1">
 						<a href="podgotovka_k_ekzamenu.html">
 						    Подробная информация о репетиторе по высшей математике
@@ -449,6 +451,7 @@
 				<em>теории вероятностей</em>, 
 				дальнейший выход на специальные дисциплины.
 				</span>
+                <br>
 				<span class="p1">
 					<a href="mathematics-for-professionals.html">
 					Подробная информация о репетиторе по математике для взрослых
@@ -464,6 +467,7 @@
 					способности. Также оказывается экстренная помощь: 
 					<em>репетитор по математике онлайн.</em>
 				</span>
+                <br>
 				<span class="p1">
 					<a href="pomosch_reshenii_zadach.html">
 					    Подробная информация о репетиторе онлайн по математике
