--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -344,7 +344,7 @@
 					проводит репетитор по математике Игнатьев Игорь Викторович.
 					</span>
 			</h2>
-			<h3>Лицеи в Минске:</h3>
+			<h3>1. Лицеи в Минске:</h3>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
 					После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске: лицей им. Ф.Э. Дзержинского БГУ,
@@ -355,6 +355,28 @@
 					профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
 					заблаговременно.
 
+				</p>
+			<h3>2. Вступительный экзамен в лицеи:</h3>
+			<div id="realmain" class="zgt">
+				<p class="zgt">
+					На протяжении продолжительного времени каждый лицей самостоятельно готовил варианты вступительных экзаменов. Как правило, чем 
+					престижнее был лицей, тем тяжелее вступительные испытания.  Но основная проблема заключалась в том, что при таком подходе всегда 
+					страдала объективность вступительной кампании: появлялись репетиторы, которым заранее известны варианты вступительных испытаний, 
+					становились важными определенные знакомства, финансовые возможности и т.д.
+				</p>
+				<p class="zgt">
+					В 2022 году <em>варианты вступительных экзаменов начал составлять РИКЗ</em>. Экзамен состоит из 10 заданий разного уровня сложности. 
+					Не стоит его путать с выпускным экзаменом в 9 классе. Вступительные испытания сложнее, и задания заранее не известны. 
+					Цель вступительного экзамена – выявить лучших, а не сделать его несложным для многих. Вступительная кампания стала значительно 
+					прозрачней и справедливей. Я бы порекомендовал сдать вступительные испытания хотя бы для того, чтобы <em>оценить свои реальные 
+					знания по математике и сопоставить себя с другими мотивированными учащимися</em>.
+				</p>
+				<p class="zgt">
+					Когда стоит начинать подготовку? <em>Чем раньше, тем лучше</em>. Кашу маслом не испортишь) Если ученик, обладающий трудолюбием и определенными 
+					способностями, занимался у меня в 7-м и 8-м классе на <em>углубленном уровне изучения математики</em>, то в 9-м он продолжает работать по привычной 
+					для него схеме. Тот факт, что дополнительно появляются <em>варианты по программе профильного</em>, а затем и углубленного изучения математики на 
+					базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
+					экзамены прошлых лет, составленные РИКЗ. Проводится <em> повторение, обобщение и систематизация</em> пройденного материала за 9 лет обучения.
 				</p>
 				<ul>
 					<li>Пункт важный </li>
