M-185. Добавлен весь осовной текст.

--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -378,17 +378,27 @@
 					базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
 					экзамены прошлых лет, составленные РИКЗ. Проводится <em> повторение, обобщение и систематизация</em> пройденного материала за 9 лет обучения.
 				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
-				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+				<p><span class="p1">
+					<a href ="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
+					</span>
 				</p>
+				<p><span class="p1">
+					<a href ="metodika_prepodavania.html">Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице </a>
+					</span>
+				</p>
+				<p class="zgt">
+					Могу рекомендовать репетитора по физике для подготовки в лицеи.
+				</p>
+				<p class="zgt">
+					<strong>Литература для подготовки к ЦТ и ЦЭ по математике:</strong>
+				</p>
+				<ul class="zgt">
+					<li>Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)</li>
+					<li>Арефьева И.Г., Пирютко О.Н. Школа юных математиков. Алгебра. 9 класс (Аверсэв)</li>
+					<li>Валаханович Т.В., Шлыков В.В. Геометрия. 9 класс. Самостоятельные и контрольные работы (Аверсэв)</li>
+					<li>Основные учебные материалы предоставляю я</li>
+				</ul>
+		
 			</div>
 		<div class="clear"></div>
 	</div>
