--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -344,8 +344,8 @@
 					проводит репетитор по математике Игнатьев Игорь Викторович.
 					</span>
 			</h2>
-			<h3>1. Лицеи в Минске:</h3>
 			<div id="realmain" class="zgt">
+				<h3>1. Лицеи в Минске:</h3>
 				<p class="zgt">
 					После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске: лицей им. Ф.Э. Дзержинского БГУ,
 					лицей БНТУ и Минский государственный областной лицей. В последние годы <em>единые экзамены</em> для 
@@ -356,8 +356,7 @@
 					заблаговременно.
 
 				</p>
-			<h3>2. Вступительный экзамен в лицеи:</h3>
-			<div id="realmain" class="zgt">
+				<h3>2. Вступительный экзамен в лицеи:</h3>
 				<p class="zgt">
 					На протяжении продолжительного времени каждый лицей самостоятельно готовил варианты вступительных экзаменов. Как правило, чем 
 					престижнее был лицей, тем тяжелее вступительные испытания.  Но основная проблема заключалась в том, что при таком подходе всегда 
@@ -389,9 +388,9 @@
 				<p class="zgt">
 					Могу рекомендовать репетитора по физике для подготовки в лицеи.
 				</p>
-				<p class="zgt">
-					<strong>Литература для подготовки к ЦТ и ЦЭ по математике:</strong>
-				</p>
+				<h3>
+					Литература для подготовки к ЦТ и ЦЭ по математике:
+				</h3>
 				<ul class="zgt">
 					<li>Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)</li>
 					<li>Арефьева И.Г., Пирютко О.Н. Школа юных математиков. Алгебра. 9 класс (Аверсэв)</li>
