--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -31,10 +31,9 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>				Репетитор по математике готовит к экзамену в лицеи. </h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				Подготовка по математике к поступлению в лицей, 9 класс. 
 			</span>
 			</div>
 			<div class="g3">
@@ -350,7 +349,7 @@
 					После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске: лицей им. Ф.Э. Дзержинского БГУ,
 					лицей БНТУ и Минский государственный областной лицей. В последние годы <em>единые экзамены</em> для 
 					поступления  составляет
-					<a href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a>, 
+					<span class="p1"><a href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a></span>, 
 					разница будет в количестве проходных баллов в зависимости от престижности выбранного лицея и 
 					профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
 					заблаговременно.
@@ -371,7 +370,10 @@
 					знания по математике и сопоставить себя с другими мотивированными учащимися</em>.
 				</p>
 				<p class="zgt">
-					Когда стоит начинать подготовку? <em>Чем раньше, тем лучше</em>. Кашу маслом не испортишь) Если ученик, обладающий трудолюбием и определенными 
+					Когда стоит начинать подготовку? <em>Чем раньше, тем лучше</em>. Кашу маслом не испортишь
+					<img src="./images/advantages/smile.png" 
+					alt="tech"
+					style="vertical-align: middle; width: 30px;"> Если ученик, обладающий трудолюбием и определенными 
 					способностями, занимался у меня в 7-м и 8-м классе на <em>углубленном уровне изучения математики</em>, то в 9-м он продолжает работать по привычной 
 					для него схеме. Тот факт, что дополнительно появляются <em>варианты по программе профильного</em>, а затем и углубленного изучения математики на 
 					базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
@@ -381,10 +383,10 @@
 					<a href ="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
 					</span>
 				</p>
-				<p><span class="p1">
-					<a href ="metodika_prepodavania.html">Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице </a>
-					</span>
-				</p>
+				<!-- <p><span class="p1"> -->
+					<!-- <a href ="metodika_prepodavania.html">Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице </a> -->
+					<!-- </span> -->
+				<!-- </p> -->
 				<p class="zgt">
 					Могу рекомендовать репетитора по физике для подготовки в лицеи.
 				</p>
