--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -336,6 +336,17 @@
 			</div>
 
 			<h2 class="main"> 
+				<div class="ck">
+					<img alt="Репетитор по математике готовит к экзамену в лицеи"
+						class="image1"  
+						src="images/photo/preparation-for-lyceums-1.jpg" 
+						title="Репетитор по математике готовит к экзамену в лицеи">
+					<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+					<img alt="Подготовка по математике к поступлению в лицей, 9 класс"
+						class="image" 
+						src="images/photo/preparation-for-lyceums-2.jpg" 
+						title="Подготовка по математике к поступлению в лицей, 9 класс">
+				</div>
 				<span class="h21">К 9 классу пора определится с профилем обучения на III ступени –среднего образования
 					(X – XI классы). Для мотивированных детей есть 2 варианта: либо сдать серьезные вступительные экзамены
 					и поступить в лицей, либо по высокому среднему баллу итоговых оценок за 9 класс пройти в сильный
