--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -31,9 +31,12 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>				Репетитор по математике готовит к экзамену в лицеи. </h1>
+			<h1>
+				Репетитор по математике<br>
+				готовит к экзамену в лицеи
+			</h1>
 			<span class="zs">  
-				Подготовка по математике к поступлению в лицей, 9 класс. 
+				Подготовка по математике к поступлению в лицей, 9 класс
 			</span>
 			</div>
 			<div class="g3">
